...
    var loading by mutableStateOf(false)
    private var shortagesNumber by mutableIntStateOf(0)
    private var additionalNumber by mutableIntStateOf(0)
    private var shortageCodesNumber by mutableIntStateOf(0)
    private var additionalCodesNumber by mutableIntStateOf(0)
    var uiList = mutableStateListOf<Product>()
    private val scanValues = mutableListOf("اضافی", "کسری")
    private var scanFilter by mutableStateOf(1)
    private var openClearDialog by mutableStateOf(false)
    private var scanTypeValue by mutableStateOf("RFID")

    @Inject
    lateinit var state: SnackbarHostState
...
        }
        return true
    }

    fun scanTrigger() {
        if (scanningMode) {
            if (scanTypeValue == "بارکد") {
                rf.stopScanning()
                barcode.startBarcodeScan()
            } else {
                if (!rf.scanning) {
                    rf.startBulkScan()
                } else {
...
            return
        }

        api.getStockDraftDetails(code, {
            draftProperties = it
            saveToMemory()
            clear()
            scanningMode = true
            if (barcode.isEnabled && scanTypeValue == "RFID") {
                barcode.disable()
            }
            saveToMemory()
            syncInputItemsToServer()
...
                }
            },

            actions = {

                IconButton(
                    modifier = Modifier.testTag("CheckInTestTag"),
                    onClick = {
                        if (!this@StockDraftAttachEPCs.loading && !this@StockDraftAttachEPCs.loading && !rf.scanning) {
                            openClearDialog = true
                        }
                    }) {
                    Icon(
...
    @Composable
    fun Content() {
        Column {
            if (openClearDialog) {
                AlertDialogWith2Button(
                    title = "کالاهای اسکن شده پاک شوند؟",
                    btnConfirm = "بله",
                    btnNotConfirm = "خیر",
                    btnConfirmOnClick = {
                        openClearDialog = false
                        clear()
                    },
                    btnNotConfirmOnClick = { openClearDialog = false },
...
                        )
                    }
                }

                LazyColumn(modifier = Modifier.padding(bottom = 56.dp)) {

                    items(uiList.size) { i ->
                        Item(
                            i,
                            uiList,
                            true,
                            text3 = "موجودی: " + uiList[i].draftNumber,
                            text4 = uiList[i].conflictType + ":" + " " + uiList[i].conflictNumber
...
    fun Content2() {
        ScanOrTypeNumberPage(
            loading = loading,
            onClick = { getWarehouseDetails(stockDraftNumber) },
            value = stockDraftNumber,
            onValueChange = { stockDraftNumber = it },
            item = "شماره حواله"
        )
    }

    @Composable
    fun ScanFilterDropDownList(modifier: Modifier) {
        var expanded by rememberSaveable {
            mutableStateOf(false)
        }

        Box(modifier = modifier) {
            Row(
                modifier = Modifier
                    .testTag("checkInFilterDropDownList")
                    .clickable { expanded = true }) {
                Text(text = scanValues[scanFilter])
                Icon(imageVector = Icons.Filled.ArrowDropDown, "")
            }

            DropdownMenu(
...
