...

                    OutlinedButton(
                        onClick = {
                            btnNotConfirmOnClick()
                        }, modifier = Modifier
                            .padding(top = 12.dp, end = 16.dp)
                            .testTag("notConfirm")
                    )
                    {
                        Text(
                            text = btnNotConfirm,
                            style = MaterialTheme.typography.bodySmall,
                        )
...
                    Button(
                        onClick = {
                            btnConfirmOnClick()
                        },
                        modifier = Modifier
                            .padding(top = 12.dp)
                            .testTag("confirm")
                    ) {
                        Text(
                            text = btnConfirm,
                            style = MaterialTheme.typography.bodySmall,
                        )
                    }
...
