...
                        onOkClick = {
                            view.finalizeBaniStocks()
                        },

                        )
                }) {
                    Text(text = "تایید نهایی")
                }
            }
        }
    }
}

...
